html file has been setup, and the frontend connected to gateway, String url = "http://localhost:8085/api/patient/all";

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
-        <a class="navbar-brand" href="index.html">MediLabo Solutions</a>
+        <a class="navbar-brand" th:href="@{/}">MediLabo Solutions</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false"
