--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
     <title>MediLabo Solutions</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 
 <body>
@@ -16,15 +17,6 @@
 
             <span class="navbar-toggler-icon"></span>
         </button>
-
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--&lt;!&ndash;            <ul class="navbar-nav mr-auto">&ndash;&gt;-->
-<!--&lt;!&ndash;                <li class="nav-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <a class="nav-link" th:href="@{/patients}">Patients</a>&ndash;&gt;-->
-<!--&lt;!&ndash;                </li>&ndash;&gt;-->
-<!--&lt;!&ndash;            </ul>&ndash;&gt;-->
-
-<!--        </div>-->
     </nav>
     <h2 class="mt-4">All Patients</h2>
     <table class="table">
