--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,38 +1,38 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
     <title>MediLabo Solutions</title>
-
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
-        <a class="navbar-brand" th:href="@{/}">MediLabo Solutions</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/patients}">Patient Information</a>
-                </li>
-            </ul>
-
-        </div>
-    </nav>
-    <h2 class="mt-4">At MediLabo Solutions we are care for you.</h2> <br>
-
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
+<h1>Patient Directory</h1>
+<a th:href="@{/ui/add}">Add New Patient</a>
+<table>
+    <thead>
+    <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>DOB</th>
+        <th>Gender</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="patient : ${patients}">
+        <td th:text="${patient.lastName}"></td>
+        <td th:text="${patient.firstName}"></td>
+        <td th:text="${patient.birthdate}"></td>
+        <td th:text="${patient.gender}"></td>
+        <td th:text="${patient.address}"></td>
+        <td th:text="${patient.phone}"></td>
+        <td>
+            <a th:href="@{'/ui/edit/' + ${patient.id}}">Edit</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
