--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -3,30 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Patient</title>
+    <link rel="stylesheet" th:href="@{/static/styles.css}" />
 </head>
 <body>
 <h1>Edit Patient</h1>
-<form th:action="@{'/ui/edit/' + ${patient.id}}" th:object="${patient}" method="post">
-    <div class="form-group">
-    <input th:field="*{lastName}" required>
-    </div>
-    <div class="form-group">
+<form th:action="@{'/ui/update/{id}(id=${patient.id})}" method="post" th:object="${patient}">
+    <input th:field="*{lastName}" required />
     <input th:field="*{firstName}" required>
-    </div>
-    <div class="form-group">
     <input th:field="*{birthdate}" type="date" required>
-    </div>
-    <div class="form-group">
     <input th:field="*{gender}" required>
-    </div>
-    <div class="form-group">
     <input th:field="*{address}" required>
-    </div>
-    <div class="form-group">
     <input th:field="*{phone}" required>
-    </div>
     <button type="submit">Update</button>
 </form>
 
+<a th:href="@{/}">Back Homepage</a>
 </body>
 </html>
