--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -17,6 +17,6 @@
     <button type="submit">Update</button>
 </form>
 
-<a th:href="@{/}">Back Homepage</a>
+<a th:href="@{/}" class="btn btn-primary mt-3">Back Homepage</a>
 </body>
 </html>
