fixed the issue with add note on frontend by adding #addForm on addNote method

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -42,6 +42,7 @@
     <textarea th:field="*{notes[0]}" id="noteText" placeholder="Enter observation note" required></textarea>
     <button type="submit">Add Note</button>
 </form>
+<a th:href="@{/ui/add}" class="btn btn-primary mt-3">Back to Patient List!</a>
 
 </body>
 </html>
