--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -54,12 +54,14 @@
     <thead>
     <tr>
         <th>patId</th>
+        <th>Patient Name</th>
         <th>Notes</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="note : ${notes}">
         <td th:text="${note.patId}">patId</td>
+        <td th:text="${note.fullName}">Patient Name</td>
         <td>
             <ul th:if="${note.notes != null}">
                 <li th:each="n : ${note.notes}" th:text="${n}">Note</li>
