updated the dockerfile to compile with code by changing the version of java

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -79,7 +79,7 @@
     <thead>
     <tr>
         <th class="text-left">PatID</th>
-        <th class="text-left">Expected Risk</th>
+        <th class="diagnosis-text">Expected Risk</th>
     </tr>
     </thead>
     <tbody>
