--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
+<h2>Welcome, [[${username}]]!</h2>
+<p>Backend 8081 says: [[${backendA}]]</p>
+
+<p><a href="http://localhost:8085/logout">Logout (via Gateway)</a></p>
 <h1>Add New Patient</h1>
 <form th:action="@{/ui/add}" method="post" th:object="${patient}">
     <div class="form-group row">
